[project]
name = "wow-node-watcher"
version = "0.1.0"
description = "Screen-region watcher that alerts when a WoW gathering node indicator appears"
requires-python = ">=3.14"
dependencies = [
    "dxcam",
    "opencv-python",
    "numpy",
]

[dependency-groups]
dev = ["ruff"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]